tests-integration/fixtures/checking/193_coercible_newtype_open_hidden/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
coerceOpen :: Int -> HiddenAge

Types

Diagnostics
error[CoercibleConstructorNotInScope]: Constructor not in scope for Coercible
  --> 6:1..6:31
  |
6 | coerceOpen :: Int -> HiddenAge
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Coercible @Type Int HiddenAge
  --> 6:1..6:31
  |
6 | coerceOpen :: Int -> HiddenAge
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
